[VAS-1119] added unit tests